[project]
name = "asttrs"
version = "1.3.0"
description = "A attrs-style wrapper for python ast"
authors = [
    {name = "ryanchao2012", email = "ryanchao2012@gmail.com"},
]
urls = {repository = "https://github.com/ryanchao2012/asttrs"}
license = {text = "MIT"}
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.7"
dependencies = [
    "attrs",
    "black",
    "cattrs",
    "isort",
    "ast-decompiler",
]

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "invoke",
    "ipython",
    "flake8",
    "pytest",
    "pytest-cov",
    "coverage",
]
